[package]
name = "circular_calendar"
version = "0.1.0"
authors = ["Mike Dilger <mike@optcomp.nz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = [ "wasmbind" ] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
 'Document',
 'Element',
 'HtmlElement',
 'SvgImageElement',
 'Node',
 'Window',
 'Attr',
]

[profile.release]
opt-level = "s"
lto = true
